--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "plugins": ["transform-es2015-modules-commonjs"]
+  "plugins": [
+    "transform-es2015-modules-commonjs",
+    "babel-plugin-syntax-async-functions",
+    "babel-plugin-transform-async-to-generator"
+  ]
 }
