--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 env:
   node: true
   es6: true
-  
+
+parser: babel-eslint
+
 parserOptions:
   ecmaFeatures:
     jsx: true
@@ -90,7 +92,7 @@ rules:
   no-new-symbol: 2
   no-this-before-super: 2
   prefer-const: 2
-
+  
 # Global scoped method and vars
 globals:
   DTRACE_HTTP_CLIENT_REQUEST           : false
